# fastformat

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  pip_release.yml  release.yml
apis/rust/: Cargo.toml
apis/rust-derive/: Cargo.toml
apis/rust/src/: lib.rs
examples/benchmark/: Cargo.toml  dataflow_fastformat.yml  dataflow_raw.yml
examples/benchmark/node/: Cargo.toml
examples/benchmark/node/src/: main.rs
examples/benchmark/src/: main.rs
examples/custom-datatype/: Cargo.toml
examples/custom-datatype/src/: main.rs
examples/dora-benchmark/: .gitignore  dataflow-fastformat.yml  dataflow-raw.yml  dataflow.yml  main.rs
examples/dora-benchmark/receiver/: Cargo.toml
examples/dora-benchmark/receiver-fastformat/: Cargo.toml
examples/dora-benchmark/receiver-fastformat/src/: main.rs
examples/dora-benchmark/receiver-raw/: Cargo.toml
examples/dora-benchmark/receiver-raw/src/: main.rs
examples/dora-benchmark/sender/: Cargo.toml
examples/dora-benchmark/sender-fastformat/: Cargo.toml
examples/dora-benchmark/sender-fastformat/src/: main.rs
examples/dora-benchmark/sender-raw/: Cargo.toml
examples/dora-benchmark/sender-raw/src/: main.rs
examples/dummy-opencv-capture/: Cargo.toml  main.rs
examples/dummy-opencv-capture/src/: main.rs
examples/python-bbox/: Cargo.toml
examples/python-bbox/src/: main.py  main.rs
examples/python-image/: Cargo.toml  main.py
examples/python-image/src/: main.py
examples/rust-image/: main.rs
libraries/converter/: Cargo.toml
libraries/converter/src/: arrow.rs  lib.rs  ndarray.rs
libraries/converter/src/arrow/: builder.rs  consumer.rs  viewer.rs
libraries/datatypes/: Cargo.toml
libraries/datatypes/src/: bbox.rs  image.rs  image_in_video.rs  joints_position.rs  laser_scan_2d.rs  lib.rs
libraries/datatypes/src/bbox/: arrow.rs  encoding.rs  ndarray.rs  xywh.rs  xyxy.rs
libraries/datatypes/src/image/: arrow.rs  bgr8.rs  data.rs  encoding.rs  gray8.rs  ndarray.rs  rgb8.rs
libraries/datatypes/src/image_in_video/: arrow.rs
libraries/datatypes/src/joints_position/: encoding.rs
libraries/datatypes/src/laser_scan_2d/: arrow.rs
libraries/fastformat/: Cargo.toml  pyproject.toml
libraries/fastformat/fastformat/: __init__.py  __init__.pyi
libraries/fastformat/fastformat/datatypes/: __init__.py  __init__.pyi
libraries/fastformat/fastformat/datatypes/bbox/: __init__.py  __init__.pyi
libraries/fastformat/fastformat/datatypes/image/: __init__.py  __init__.pyi
libraries/fastformat/src/: lib.rs
src/: arrow.rs  bbox.rs  bboxes.rs  datatypes.rs  image.rs  image_sequence.rs  lib.rs  main.rs
src/bbox/: arrow.rs  encoding.rs  xywh.rs  xyxy.rs
src/datatypes/: bbox.rs  image.rs
src/datatypes/bbox/: arrow.rs  xywh.rs  xyxy.rs
src/datatypes/image/: arrow.rs  bgr8.rs  encoding.rs  gray8.rs  rgb8.rs
src/image/: arrow.rs  bgr8.rs  container.rs  data.rs  gray8.rs  rgb8.rs
src/python/: image.rs
