[workspace]
members = [
    "libraries/converter",
    "libraries/datatypes",
    "libraries/fastformat",
    "examples/dummy-opencv-capture",
    "examples/benchmark",
    "examples/benchmark/node",
    "examples/python-image",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
description = ""
edition = "2021"
documentation = ""
license = "Apache-2.0"
repository = "https://github.com/dora-rs/fastformat/"

[workspace.dependencies]
fastformat-datatypes = { path = "libraries/datatypes" }
fastformat-converter = { path = "libraries/converter" }
fastformat = { path = "libraries/fastformat" }

arrow = "52.2.0"
eyre = "0.6.12"
ndarray = "0.16.1"
numpy = "0.21.0"
pyo3 = { version = "0.21" }
