[workspace]
members = [
    "libraries/converter",
    "libraries/datatypes",

    "apis/rust",

    "examples/custom-datatype",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
description = "FastFormat is a Rust library for fast and efficient data serialization and deserialization with Arrow format."
edition = "2021"
documentation = ""
license = "Apache-2.0"
repository = "https://github.com/dora-rs/fastformat/"

[workspace.dependencies]
fastformat-converter = { path = "libraries/converter" }
fastformat-core = { path = "libraries/core" }
fastformat-datatypes = { path = "libraries/datatypes" }

fastformat = { path = "apis/rust" }

arrow = "52.2.0"
eyre = "0.6.12"
ndarray = "0.16.1"
numpy = "0.21.0"
