[package]
name = "custom-datatype"
version.workspace = true
description.workspace = true
edition.workspace = true
documentation.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
fastformat = { workspace = true }
arrow = { workspace = true }
eyre = { workspace = true }
