[package]
name = "fastformat-converter"
version.workspace = true
edition.workspace = true
documentation.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[features]
arrow = ["dep:arrow"]
ndarray = ["dep:ndarray"]
kornia = ["dep:kornia"]
numpy = ["ndarray", "dep:numpy"]
pyarrow = ["arrow"]

[dependencies]
arrow = { workspace = true, optional = true }
ndarray = { workspace = true, optional = true }
numpy = { workspace = true, optional = true }
eyre = { workspace = true }
kornia = { workspace = true, optional = true }
