[package]
name = "fastformat-datatypes"
version.workspace = true
edition.workspace = true
documentation.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[features]
arrow = ["fastformat-converter/arrow", "dep:arrow"]
ndarray = ["fastformat-converter/ndarray", "dep:ndarray"]

[dependencies]
fastformat-converter = { workspace = true }
eyre = { workspace = true }
arrow = { workspace = true, optional = true }
ndarray = { workspace = true, optional = true }
pyo3 = { workspace = true, features = ["extension-module", "eyre"] }
