[package]
name = "fastformat-datatypes"
version.workspace = true
edition.workspace = true
documentation.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
fastformat-converter = { workspace = true }
eyre = { workspace = true }
arrow = { workspace = true }
ndarray = { workspace = true }
