[package]
name = "fastformat"
version.workspace = true
edition.workspace = true
documentation.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "fastformat"
crate-type = ["cdylib", "lib"]

[features]
arrow = ["fastformat-datatypes/arrow", "fastformat-converter/arrow"]
ndarray = ["fastformat-datatypes/ndarray", "fastformat-converter/ndarray"]
numpy = ["fastformat-converter/numpy"]
pyarrow = ["fastformat-converter/pyarrow"]

[dependencies]
fastformat-datatypes = { workspace = true }
fastformat-converter = { workspace = true }
pyo3 = { workspace = true, features = ["extension-module"] }
