[package]
name = "fastformat"
version.workspace = true
edition.workspace = true
documentation.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "fastformat"
crate-type = ["cdylib", "lib"]

[features]
arrow = ["fastformat-datatypes/arrow", "fastformat-converter/arrow"]
ndarray = ["fastformat-datatypes/ndarray", "fastformat-converter/ndarray"]
kornia = ["fastformat-converter/kornia", "fastformat-datatypes/kornia"]
numpy = ["fastformat-converter/numpy"]
pyarrow = ["fastformat-converter/pyarrow"]

[dependencies]
fastformat-datatypes = { workspace = true }
fastformat-converter = { workspace = true }

pyo3 = { version = "0.21", features = ["extension-module"], optional = true }
