[package]
name = "fastformat"
version.workspace = true
edition.workspace = true
documentation.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "fastformat"
crate-type = ["cdylib", "lib"]

[dependencies]
fastformat-datatypes = { workspace = true }
fastformat-converter = { workspace = true }

pyo3 = { version = "0.21", features = ["extension-module"] }
