[package]
name = "benchmark-node"
version.workspace = true
edition.workspace = true
documentation.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
arrow = { workspace = true }
eyre = { workspace = true }

clap = { version = "4.5.17", features = ["derive"] }
rand = "0.8.5"
dora-node-api = "0.3.6"
